--- a/coding_challenge.yml
+++ b/coding_challenge.yml
@@ -14,4 +14,26 @@
              image: openresty/openresty:alpine
              container_name: openresty
              ports:
-               - "80:80"
+               - "9000:80"
+             restart: always
+           nginx:
+             image: nginx:alpine
+             container_name: nginx
+             ports:
+               - "7000:80"
+             volumes:
+               - coding-challenge:/usr/share/nginx/html
+             restart: always
+           php:
+             image: php:7.4-fpm-alpine
+             container_name: php
+             volumes:
+               - coding-challenge:/var/www/html
+             restart: always
+        volumes:
+           coding-challenge:
+             driver: local
+             driver_opts:
+               type: none
+               device: "/Users/anaselkassimi/Desktop/Coding-Challenge2/volumes/"
+               o: bind
