--- a/coding_challenge.yml
+++ b/coding_challenge.yml
@@ -10,14 +10,14 @@
       definition:
         version: '3'
         services:
-          # openresty:
-          #   image: openresty/openresty:alpine
-          #   container_name: openresty
-          #   ports:
-          #     - "9000:80"
-          #   networks:
-          #     - Youcan-network
-          #   restart: always
+           openresty:
+             image: openresty/openresty:focal
+             container_name: openresty
+             ports:
+               - "9000:80"
+             networks:
+               - Youcan-network
+             restart: always
            nginx:
              build: /Users/anaselkassimi/Desktop/Coding-Challenge2/nginx
              image: nginx
@@ -27,19 +27,17 @@
              networks:
                - Youcan-network
              volumes:
-               - coding-challenge:/var/www/html
+               - coding-challenge:/usr/share/nginx/html
              restart: always
              depends_on:
                - php
            php:
              image: php:7.4-fpm
              container_name: php
-             ports:
-               - "9000"
              networks:
                - Youcan-network
              volumes:
-               - coding-challenge:/var/www/html
+               - coding-challenge:/usr/share/nginx/html
              restart: always
         volumes:
            coding-challenge:
